# anguish_engine

./: CMakeLists.txt  README.md  dependencies.cmake
core/: CMakeLists.txt  ae_core.h  app.cpp  app.h  game.cpp  game.h
core/audio/: audio_effect.h  audio_manager.cpp  audio_manager.h  audio_player.cpp  audio_player.h  stereo_sample.h  volume_effect.cpp  volume_effect.h
core/idle/: idle_manager.cpp  idle_manager.h
core/input/: input_event.h  input_manager.cpp  input_manager.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
core/layers/: game_layer.cpp  game_layer.h  layer.cpp  layer.h
core/math/: matrix.h  rect.cpp  rect.h  transform.h  vector2.cpp  vector2.h  vector2i.cpp  vector2i.h
core/memory/: memory_manager.cpp  memory_manager.h
core/objects/: animated_sprite.cpp  animated_sprite.h  camera.cpp  camera.h  camera_object.cpp  camera_object.h  character.cpp  character.h  collision.cpp  collision.h  collision_object.cpp  collision_object.h  item.h  object.cpp  object.h  rendered_object.cpp  rendered_object.h  sprite.cpp  sprite.h
core/ogl/: ebo.cpp  ebo.h  gl_error.h  gl_object.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertices.h
core/physics/: aabb.cpp  aabb.h  physics_manager.cpp  physics_manager.h
core/renderer/: rendering_manager.cpp  rendering_manager.h
core/shaders/: anim_vert.glsl  shader.cpp  shader.h  shader_program.cpp  shader_program.h  vert.glsl
core/texture/: spritesheet.cpp  spritesheet.h  texture.cpp  texture.h
core/utilities/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  data_structures.cpp  data_structures.h  file_io.h  keyboard.cpp  keyboard.h  logger.h  object_queue.h  persists.h  rect.cpp  rect.h  shared.h  signal.h  time.h  timer.cpp  timer.h  transform.h  type_checking.h  vector2.cpp  vector2.h  vector2i.cpp  window.cpp  window.h
example/: game.cpp  game.h  main.cpp
example/grass_scene/: grass_scene.cpp  grass_scene.h
example/grass_scene/environment/: grass.cpp  grass.h
example/grass_scene/player/: character.cpp  character.h  jumper.cpp  jumper.h  player.cpp  player.h  projectile.cpp  projectile.h
example/grass_scene/sprites/: character.cpp  grass.cpp
examples/: CMakeLists.txt
examples/pacman/: CMakeLists.txt  main.cpp
examples/pacman/main_scene/: banana_man.cpp  banana_man.h  main_scene.cpp  main_scene.h
examples/platformer/: CMakeLists.txt  main.cpp
examples/platformer/grass_scene/: grass_scene.cpp  grass_scene.h
examples/platformer/grass_scene/enemies/: cabbage_boy.cpp  cabbage_boy.h
examples/platformer/grass_scene/environment/: grass.cpp  grass.h
examples/platformer/grass_scene/player/: jumper.cpp  jumper.h  player.cpp  player.h  projectile.cpp  projectile.h
